fix(dogfood): use multi-arch alpine:3.18 for proto stage
The previous image was pinned to an amd64-only digest of a coder
mirror of alpine:3.18. Replace with the official multi-arch
alpine:3.18 tag so the proto stage works on both amd64 and arm64.

--- a/dogfood/coder/Dockerfile
+++ b/dogfood/coder/Dockerfile
@@ -98,8 +98,7 @@ RUN apt-get update && \
 	rm -rf /tmp/go/pkg && \
 	rm -rf /tmp/go/src
 
-# alpine:3.18
-FROM us-docker.pkg.dev/coder-v2-images-public/public/alpine@sha256:fd032399cd767f310a1d1274e81cab9f0fd8a49b3589eba2c3420228cd45b6a7 AS proto
+FROM alpine:3.18 AS proto
 ARG TARGETARCH
 WORKDIR /tmp
 RUN apk add curl unzip
