ci: fix deploy-only dispatch gating

--- a/.github/workflows/branch-deploy.yaml
+++ b/.github/workflows/branch-deploy.yaml
@@ -19,7 +19,7 @@ concurrency:
 
 jobs:
   build:
-    if: ${{ github.event_name != 'workflow_dispatch' || github.event.inputs.deploy_only != 'true' }}
+    if: ${{ github.event_name != 'workflow_dispatch' || !inputs.deploy_only }}
     runs-on: ${{ github.repository_owner == 'coder' && 'depot-ubuntu-22.04-8' || 'ubuntu-latest' }}
     permissions:
       packages: write
@@ -72,7 +72,7 @@ jobs:
 
   deploy:
     needs: build
-    if: ${{ needs.build.result == 'success' || (github.event_name == 'workflow_dispatch' && github.event.inputs.deploy_only == 'true' && needs.build.result == 'skipped') }}
+    if: ${{ always() && (needs.build.result == 'success' || (github.event_name == 'workflow_dispatch' && inputs.deploy_only && needs.build.result == 'skipped')) }}
     runs-on: ubuntu-latest
     env:
       # The existing pr-deployments templates use PR_NUMBER and
