--- a/.github/workflows/branch-deploy.yaml
+++ b/.github/workflows/branch-deploy.yaml
@@ -75,12 +75,10 @@ jobs:
     if: ${{ always() && (needs.build.result == 'success' || (github.event_name == 'workflow_dispatch' && inputs.deploy_only && needs.build.result == 'skipped')) }}
     runs-on: ubuntu-latest
     env:
-      # The existing pr-deployments templates use PR_NUMBER and
-      # PR_HOSTNAME. We set them to the branch name so templates
-      # work without modification.
-      PR_NUMBER: ${{ github.ref_name }}
-      PR_HOSTNAME: "${{ github.ref_name }}.${{ secrets.PR_DEPLOYMENTS_DOMAIN }}"
+      BRANCH_NAME: ${{ github.ref_name }}
+      BRANCH_HOSTNAME: "${{ github.ref_name }}.${{ secrets.PR_DEPLOYMENTS_DOMAIN }}"
       CODER_IMAGE_TAG: "ghcr.io/coder/coder-preview:${{ github.ref_name }}"
+      REPO: ghcr.io/coder/coder-preview
       EXPERIMENTS: "*"
     steps:
       - name: Harden Runner
@@ -111,7 +109,7 @@ jobs:
           set -euo pipefail
 
           set +e
-          helm_status_output="$(helm status "${{ github.ref_name }}" --namespace "${{ github.ref_name }}" 2>&1)"
+          helm_status_output="$(helm status "${BRANCH_NAME}" --namespace "${BRANCH_NAME}" 2>&1)"
           helm_status_code=$?
           set -e
 
@@ -137,14 +135,14 @@ jobs:
           last_http_code=""
 
           while [ "$attempt" -le "$max_attempts" ]; do
-            echo "Creating DNS record for ${PR_HOSTNAME} (attempt ${attempt}/${max_attempts})."
+            echo "Creating DNS record for ${BRANCH_HOSTNAME} (attempt ${attempt}/${max_attempts})."
 
             set +e
             raw_response="$(
               curl -sS -X POST "https://api.cloudflare.com/client/v4/zones/${{ secrets.PR_DEPLOYMENTS_ZONE_ID }}/dns_records" \
                 -H "Authorization: Bearer ${{ secrets.PR_DEPLOYMENTS_CLOUDFLARE_API_TOKEN }}" \
                 -H "Content-Type:application/json" \
-                --data '{"type":"CNAME","name":"*.'"${PR_HOSTNAME}"'","content":"'"${PR_HOSTNAME}"'","ttl":1,"proxied":false}' \
+                --data '{"type":"CNAME","name":"*.'"${BRANCH_HOSTNAME}"'","content":"'"${BRANCH_HOSTNAME}"'","ttl":1,"proxied":false}' \
                 -w '\n%{http_code}'
             )"
             curl_exit_code=$?
@@ -164,13 +162,13 @@ jobs:
             last_http_code="$http_code"
 
             if echo "$response" | jq -e '.success == true' > /dev/null 2>&1; then
-              echo "Created DNS record for ${PR_HOSTNAME}."
+              echo "Created DNS record for ${BRANCH_HOSTNAME}."
               exit 0
             fi
 
             # Cloudflare returns 81057 when the record already exists.
             if echo "$response" | jq -e '.errors[]? | select(.code == 81057)' > /dev/null 2>&1; then
-              echo "DNS record already exists for ${PR_HOSTNAME}."
+              echo "DNS record already exists for ${BRANCH_HOSTNAME}."
               exit 0
             fi
 
@@ -205,14 +203,17 @@ jobs:
         if: steps.check.outputs.new == 'true'
         run: |
           set -euo pipefail
-          kubectl delete namespace "${PR_NUMBER}" || true
-          kubectl create namespace "${PR_NUMBER}"
+          kubectl delete namespace "${BRANCH_NAME}" || true
+          kubectl create namespace "${BRANCH_NAME}"
 
       - name: Create certificate
         if: steps.check.outputs.new == 'true'
+        env:
+          PR_NUMBER: ${{ env.BRANCH_NAME }}
+          PR_HOSTNAME: ${{ env.BRANCH_HOSTNAME }}
         run: |
           set -euo pipefail
-          cert_secret_name="pr${PR_NUMBER}-tls"
+          cert_secret_name="pr${BRANCH_NAME}-tls"
 
           if ! kubectl get certificate "${cert_secret_name}" -n pr-deployment-certs > /dev/null 2>&1; then
             envsubst < ./.github/pr-deployments/certificate.yaml | kubectl apply -f -
@@ -238,30 +239,36 @@ jobs:
 
           kubectl get secret "${cert_secret_name}" -n pr-deployment-certs -o json |
             jq 'del(.metadata.namespace,.metadata.creationTimestamp,.metadata.resourceVersion,.metadata.selfLink,.metadata.uid,.metadata.managedFields)' |
-            kubectl -n "${PR_NUMBER}" apply -f -
+            kubectl -n "${BRANCH_NAME}" apply -f -
 
       - name: Set up PostgreSQL
         if: steps.check.outputs.new == 'true'
         run: |
           helm repo add bitnami https://charts.bitnami.com/bitnami
           helm install coder-db bitnami/postgresql \
-            --namespace "${PR_NUMBER}" \
+            --namespace "${BRANCH_NAME}" \
             --set image.repository=bitnamilegacy/postgresql \
             --set auth.username=coder \
             --set auth.password=coder \
             --set auth.database=coder \
             --set persistence.size=10Gi
-          kubectl create secret generic coder-db-url -n "${PR_NUMBER}" \
-            --from-literal=url="postgres://coder:coder@coder-db-postgresql.${PR_NUMBER}.svc.cluster.local:5432/coder?sslmode=disable"
+          kubectl create secret generic coder-db-url -n "${BRANCH_NAME}" \
+            --from-literal=url="postgres://coder:coder@coder-db-postgresql.${BRANCH_NAME}.svc.cluster.local:5432/coder?sslmode=disable"
 
       - name: Create RBAC
         if: steps.check.outputs.new == 'true'
+        env:
+          PR_NUMBER: ${{ env.BRANCH_NAME }}
+          PR_HOSTNAME: ${{ env.BRANCH_HOSTNAME }}
         run: envsubst < ./.github/pr-deployments/rbac.yaml | kubectl apply -f -
 
       # ---- Every push ----
 
       - name: Create values.yaml
         env:
+          PR_NUMBER: ${{ env.BRANCH_NAME }}
+          PR_HOSTNAME: ${{ env.BRANCH_HOSTNAME }}
+          REPO: ${{ env.REPO }}
           PR_DEPLOYMENTS_GITHUB_OAUTH_CLIENT_ID: ${{ secrets.PR_DEPLOYMENTS_GITHUB_OAUTH_CLIENT_ID }}
           PR_DEPLOYMENTS_GITHUB_OAUTH_CLIENT_SECRET: ${{ secrets.PR_DEPLOYMENTS_GITHUB_OAUTH_CLIENT_SECRET }}
         run: envsubst < ./.github/pr-deployments/values.yaml > ./deploy-values.yaml
@@ -270,8 +277,8 @@ jobs:
         run: |
           set -euo pipefail
           helm dependency update --skip-refresh ./helm/coder
-          helm upgrade --install "${PR_NUMBER}" ./helm/coder \
-            --namespace "${PR_NUMBER}" \
+          helm upgrade --install "${BRANCH_NAME}" ./helm/coder \
+            --namespace "${BRANCH_NAME}" \
             --values ./deploy-values.yaml \
             --force
 
@@ -280,14 +287,14 @@ jobs:
         run: |
           helm repo add coder-logstream-kube https://helm.coder.com/logstream-kube
           helm upgrade --install coder-logstream-kube coder-logstream-kube/coder-logstream-kube \
-            --namespace "${PR_NUMBER}" \
-            --set url="https://${PR_HOSTNAME}"
+            --namespace "${BRANCH_NAME}" \
+            --set url="https://${BRANCH_HOSTNAME}"
 
       - name: Create first user and template
         if: steps.check.outputs.new == 'true'
         run: |
           set -euo pipefail
-          URL="https://${PR_HOSTNAME}/bin/coder-linux-amd64"
+          URL="https://${BRANCH_HOSTNAME}/bin/coder-linux-amd64"
           COUNT=0
           until curl --output /dev/null --silent --head --fail "$URL"; do
             sleep 5
@@ -300,15 +307,15 @@ jobs:
           echo "::add-mask::$password"
 
           /tmp/coder login \
-            --first-user-username "${PR_NUMBER}-admin" \
-            --first-user-email "${PR_NUMBER}@coder.com" \
+            --first-user-username "${BRANCH_NAME}-admin" \
+            --first-user-email "${BRANCH_NAME}@coder.com" \
             --first-user-password "$password" \
             --first-user-trial=false \
             --use-token-as-session \
-            "https://${PR_HOSTNAME}"
+            "https://${BRANCH_HOSTNAME}"
 
           cd .github/pr-deployments/template
-          /tmp/coder templates push -y --variable "namespace=${PR_NUMBER}" kubernetes
+          /tmp/coder templates push -y --variable "namespace=${BRANCH_NAME}" kubernetes
           /tmp/coder create --template="kubernetes" kube \
             --parameter cpu=2 --parameter memory=4 --parameter home_disk_size=2 -y
           /tmp/coder stop kube -y
