ci(branch-deploy): delete orphaned PVs on fresh deploy
When a namespace is deleted, the PVC is removed but the PV may
survive with a Retain reclaim policy. On reinstall, the new PVC
binds to the stale PV, reusing the old Postgres data (which has
an admin user created with a random password from a prior run).
This causes 401 errors on the login step.

Fix: after namespace deletion, find and delete any PVs that were
bound to PVCs in that namespace before recreating it.

--- a/.github/workflows/branch-deploy.yaml
+++ b/.github/workflows/branch-deploy.yaml
@@ -256,7 +256,13 @@ jobs:
         if: steps.check.outputs.new == 'true'
         run: |
           set -euo pipefail
-          kubectl delete namespace "${DEPLOY_NAME}" || true
+          kubectl delete namespace "${DEPLOY_NAME}" --wait=true || true
+          # Delete any orphaned PVs that were bound to PVCs in this
+          # namespace. Without this, the old PV (with stale Postgres
+          # data) gets reused on reinstall, causing auth failures.
+          kubectl get pv -o json | \
+            jq -r '.items[] | select(.spec.claimRef.namespace=='"${DEPLOY_NAME}"') | .metadata.name' | \
+            xargs -r kubectl delete pv || true
           kubectl create namespace "${DEPLOY_NAME}"
 
       # ---- Every push: ensure deployment certificate ----
