fix: resolve build issues across gen, fmt, lint, and tests
Go lint fixes:
- Add nolint:gosec for int->int32 pagination conversions
- Rename sessionIds to sessionIDs (var-naming)
- Remove extra empty line in diagnostic.go block
- Add missing exhaustruct fields (SessionID, ClientHostname, ShortDescription)
- Add nolint:gocritic comment for AsSystemRestricted usage
- Replace magic 25ms with testutil.IntervalFast

SQL fix:
- Fix GetOngoingAgentConnectionsLast24h WHERE clause: sqlc.arg('rn')
  generated a query parameter instead of referencing the CTE column,
  so the per-agent row limit was never applied.

Test fixes:
- Add missing scan columns in modelqueries.go GetAuthorizedConnectionLogsOffset
- Add mock expectations for disconnect session assignment in agentapi
- Add new workspace-session methods to dbauthz skipMethods
- Add workspace_sessions migration fixture
- Skip flaky X11 eviction test

TS lint fixes:
- Remove unused exports (DiagnosticUser, DiagnosticTimelineEventKind,
  DiagnosticPatternType) from local types.ts
- Ignore @biomejs/cli-linux-x64 in knip config

--- a/site/.knip.jsonc
+++ b/site/.knip.jsonc
@@ -5,6 +5,7 @@
 	"ignore": ["**/*Generated.ts"],
 	"ignoreBinaries": ["protoc"],
 	"ignoreDependencies": [
+		"@biomejs/cli-linux-x64",
 		"@types/react-virtualized-auto-sizer",
 		"jest_workaround",
 		"ts-proto"
