feat: add `Geist Mono` as a font

--- a/site/package.json
+++ b/site/package.json
@@ -42,6 +42,7 @@
 		"@emotion/react": "11.14.0",
 		"@emotion/styled": "11.14.1",
 		"@fontsource-variable/geist": "5.2.8",
+		"@fontsource-variable/geist-mono": "5.2.7",
 		"@fontsource/fira-code": "5.2.7",
 		"@fontsource/ibm-plex-mono": "5.2.7",
 		"@fontsource/jetbrains-mono": "5.2.8",
