--- a/site/package.json
+++ b/site/package.json
@@ -74,6 +74,7 @@
 		"@xterm/xterm": "5.5.0",
 		"ansi-to-html": "0.7.2",
 		"axios": "1.13.2",
+		"canvas-confetti": "1.9.4",
 		"chroma-js": "2.6.0",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
@@ -94,7 +95,6 @@
 		"pretty-bytes": "6.1.1",
 		"react": "19.2.2",
 		"react-color": "2.19.3",
-		"react-confetti": "6.4.0",
 		"react-date-range": "1.4.0",
 		"react-dom": "19.2.2",
 		"react-markdown": "9.1.0",
@@ -135,6 +135,7 @@
 		"@testing-library/jest-dom": "6.9.1",
 		"@testing-library/react": "14.3.1",
 		"@testing-library/user-event": "14.6.1",
+		"@types/canvas-confetti": "1.9.0",
 		"@types/chroma-js": "2.4.0",
 		"@types/color-convert": "2.0.4",
 		"@types/express": "4.17.17",
