--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,7 @@ AGENTS.local.md
 
 # Ignore plans written by AI agents.
 PLAN.md
+
+# cdev load balancer temp config (created under repo root for
+# Docker Desktop bind mount compatibility).
+.cdev-lb-*
