fix(changelog): fix migrations and generated artifacts

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1337,6 +1337,10 @@
 							"path": "./reference/api/builds.md"
 						},
 						{
+							"title": "Changelog",
+							"path": "./reference/api/changelog.md"
+						},
+						{
 							"title": "Debug",
 							"path": "./reference/api/debug.md"
 						},
