feat: add Secure Enclave connect-auth for workspace connections
Add a second authentication layer for sensitive workspace operations
(SSH, port-forward) using the macOS Secure Enclave and Touch ID.

When --connect-auth-endpoints is configured, the server requires an
ECDSA P-256 signature proof for workspace connections. The private key
lives in the Secure Enclave and never leaves the hardware. Each signing
operation triggers a Touch ID biometric prompt.

Key design decisions:
- CryptoKit (Swift) for Secure Enclave access — works without code
  signing entitlements, unlike the Security framework
- Timestamp-based proofs (no server-side nonce) — no extra round-trip
- Connect key is immutable once set — prevents stolen session token
  from overwriting the victim's key
- Configurable per-endpoint enforcement via deployment flag
- Graceful degradation: non-macOS clients skip Touch ID silently,
  enforcement only blocks when the flag is set

No new Go module dependencies. The Swift code compiles into a static
library linked via CGO with build tags (darwin && cgo).

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -934,6 +934,11 @@
 							"description": "Encrypt the database to prevent unauthorized access",
 							"path": "./admin/security/database-encryption.md",
 							"state": ["premium"]
+						},
+						{
+							"title": "Secure Enclave Connect Auth",
+							"description": "Require Touch ID for sensitive workspace connections on macOS",
+							"path": "./admin/security/secure-enclave-connect-auth.md"
 						}
 					]
 				},
