Add the frontend

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1255,6 +1255,10 @@
 							"path": "./reference/api/builds.md"
 						},
 						{
+							"title": "Chats",
+							"path": "./reference/api/chats.md"
+						},
+						{
 							"title": "Debug",
 							"path": "./reference/api/debug.md"
 						},
