--- a/site/package.json
+++ b/site/package.json
@@ -51,6 +51,7 @@
 		"@mui/system": "5.18.0",
 		"@mui/utils": "5.17.1",
 		"@mui/x-tree-view": "7.29.10",
+		"@pierre/diffs": "1.0.11",
 		"@radix-ui/react-avatar": "1.1.11",
 		"@radix-ui/react-checkbox": "1.3.3",
 		"@radix-ui/react-collapsible": "1.1.12",
