Fix markdown response parsing

--- a/site/package.json
+++ b/site/package.json
@@ -67,6 +67,7 @@
 		"@radix-ui/react-slot": "1.2.4",
 		"@radix-ui/react-switch": "1.2.6",
 		"@radix-ui/react-tooltip": "1.2.8",
+		"@streamdown/code": "1.0.2",
 		"@tanstack/react-query-devtools": "5.77.0",
 		"@xterm/addon-canvas": "0.7.0",
 		"@xterm/addon-fit": "0.10.0",
@@ -111,6 +112,7 @@
 		"remark-gfm": "4.0.1",
 		"resize-observer-polyfill": "1.5.1",
 		"semver": "7.7.3",
+		"streamdown": "2.2.0",
 		"tailwind-merge": "2.6.0",
 		"tailwindcss-animate": "1.0.7",
 		"tzdata": "1.0.46",
