Improve the chat display

--- a/site/package.json
+++ b/site/package.json
@@ -94,6 +94,7 @@
 		"lodash": "4.17.21",
 		"lucide-react": "0.555.0",
 		"monaco-editor": "0.55.1",
+		"motion": "12.34.1",
 		"pretty-bytes": "6.1.1",
 		"react": "19.2.2",
 		"react-color": "2.19.3",
